kuber-general/13.3/manifests/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-apps
  labels:
    app: two-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: two-apps
  template:
    metadata:
      labels:
        app: two-apps
    spec:
      containers:
      - name: nginx
        image: nginx:1.23.3
        ports:
        - containerPort: 80
        volumeMounts:
          - name: html-page-share
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
        - name: html-page-share
          configMap:
            name: page-configmap
