kuber-general/13.3/manifests/deployment-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.23.3
        ports:
        - containerPort: 443
        volumeMounts:
          - name: html-page-share
            mountPath: /usr/share/nginx/html/
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/
      volumes:
        - name: html-page-share
          configMap:
            name: page-configmap
        - name: nginx-config
          configMap:
            name: nginx-conf
