kuber-general/13.3/manifests/service-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: nginx-http
    port: 443
    targetPort: 443
    nodePort: 31000
